<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="263dp"
        android:layout_height="146dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <Button
            android:id="@+id/catalog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="catalogOdejdi"
            android:text="@string/catalog" />

        <Button
            android:id="@+id/skidki"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="skidki"
            android:text="@string/skidki" />

        <Button
            android:id="@+id/opisanie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="opisanieMagazina"
            android:text="@string/opisanie" />
    </LinearLayout>

    <TextView
        android:id="@+id/Welcom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:textColor="@color/blue"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"/>

</androidx.constraintlayout.widget.ConstraintLayout>