<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".krosi">
    <TableLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <LinearLayout
                android:layout_width="130dp"
                android:layout_height="170dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/krosiAdikPhoto"
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    app:srcCompat="@drawable/adidas_chernie" />

                <TextView
                    android:id="@+id/krosiAdik"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/shoes_adidas_chernie"
                    android:textColor="@color/black"
                    android:textSize="11sp" />

                <TextView
                    android:id="@+id/krosiAdikPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/price"
                    android:textColor="@color/black"
                    android:textSize="11sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="130dp"
                android:layout_height="170dp"
                android:orientation="vertical"
                android:layout_marginHorizontal="75dp"
                >

                <ImageView
                    android:id="@+id/krosiNikePhoto"
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    app:srcCompat="@drawable/krosi_nike_chernie" />

                <TextView
                    android:id="@+id/krosiNike"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/shoes_nike_chernie"
                    android:textColor="@color/black"
                    android:textSize="11sp" />

                <TextView
                    android:id="@+id/krosiNikePrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/price"
                    android:textColor="@color/black"
                    android:textSize="11sp" />
            </LinearLayout>
        </TableRow>


    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>