<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".hoodi">

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <LinearLayout
                android:layout_width="130dp"
                android:layout_height="170dp"
                android:orientation="vertical"
                android:onClick="hudiRpndpInfo">

                <ImageView
                    android:id="@+id/hudiRpndpPhoto"
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    app:srcCompat="@drawable/hudi_rpndp" />

                <TextView
                    android:id="@+id/hudiRpndp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/hoodi_rpndp"
                    android:textColor="@color/black"
                    android:textSize="11sp" />

                <TextView
                    android:id="@+id/hudiRpndpPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/price"
                    android:textColor="@color/black"
                    android:textSize="11sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="130dp"
                android:layout_height="170dp"
                android:orientation="vertical"
                android:onClick="hudiNikeInfo"
                android:layout_marginHorizontal="75dp"
               >

                <ImageView
                    android:id="@+id/hudiNikePhoto"
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    app:srcCompat="@drawable/hudi_zelenoe" />

                <TextView
                    android:id="@+id/hudiNike"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/hoodi_nike_zelenoe"
                    android:textColor="@color/black"
                    android:textSize="11sp" />

                <TextView
                    android:id="@+id/hudiNikePrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/price"
                    android:textColor="@color/black"
                    android:textSize="11sp" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="130dp"
                android:layout_height="170dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/hudiSprmPhoto"
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    app:srcCompat="@drawable/hudi_sprm_seroe" />

                <TextView
                    android:id="@+id/hudiSprm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/hoodi_sprm_seroe"
                    android:textColor="@color/black"
                    android:textSize="11sp" />

                <TextView
                    android:id="@+id/hudiSprmPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/price"
                    android:textColor="@color/black"
                    android:textSize="11sp" />
            </LinearLayout>
        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>